MINOR: Replace Collections factory methods with Java 11+ equivalents in streams
Signed-off-by: see-quick <maros.orsak159@gmail.com>