@@ -35,9 +35,9 @@ import org.apache.kafka.streams.processor.internals.StoreFactory;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.Set;
 import java.util.Map.Entry;
 
 import static org.apache.kafka.streams.kstream.internals.graph.OptimizableRepartitionNode.optimizableRepartitionNodeBuilder;
@@ -261,7 +261,7 @@ class CogroupedStreamAggregateBuilder<K, VOut> {
             mergeProcessorName,
             keySerde,
             valueSerde,
-            Collections.singleton(mergeNode.nodeName()),
+            Set.of(mergeNode.nodeName()),
             queryableName,
             passThrough,
             mergeNode,
