@@ -27,7 +27,6 @@ import org.slf4j.LoggerFactory;
 
 import java.time.Instant;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.Map;
@@ -39,7 +38,6 @@ import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptyMap;
 import static java.util.Collections.unmodifiableMap;
 import static java.util.Collections.unmodifiableSet;
 import static java.util.Comparator.comparing;
@@ -82,7 +80,7 @@ public class ClientState {
     }
 
     ClientState(final ProcessId processId, final int capacity) {
-        this(processId, capacity, Collections.emptyMap());
+        this(processId, capacity, Map.of());
     }
 
     ClientState(final ProcessId processId, final int capacity, final Map<String, String> clientTags) {
@@ -113,7 +111,7 @@ public class ClientState {
                        final ProcessId processId) {
         this.previousStandbyTasks.setTaskIds(unmodifiableSet(new TreeSet<>(previousStandbyTasks)));
         this.previousActiveTasks.setTaskIds(unmodifiableSet(new TreeSet<>(previousActiveTasks)));
-        taskOffsetSums = emptyMap();
+        taskOffsetSums = Map.of();
         this.taskLagTotals = unmodifiableMap(taskLagTotals);
         this.capacity = capacity;
         this.clientTags = unmodifiableMap(clientTags);
